fixed project responsiveness on mobile

--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -15,8 +15,15 @@
     height: 100%;
     left: 0%;
     
-    
 }
+@media screen and (max-width: 768px) {
+  .project-container{
+    display: flex;
+    flex-direction: column;
+  }
+}
+  
+
 .project-info-container{
     position: relative;
     background-color: var(--white);
